--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A website for Casey Korver.",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build-html",
+    "build-html": "npx html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src/ --file-ext html --output-dir build/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Casey-Kiewit/korver.dev/issues"
   },
-  "homepage": "https://github.com/Casey-Kiewit/korver.dev#readme"
+  "homepage": "https://github.com/Casey-Kiewit/korver.dev#readme",
+  "dependencies": {
+    "html-minifier": "^4.0.0"
+  }
 }
