--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A website for Casey Korver.",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build-html",
+    "build": "npm run build-css && npm run build-html",
+    "build-css": "npx cleancss -O2 --batch src/css/* --batch-suffix '' --output build/css/",
     "build-html": "npx html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src/ --file-ext html --output-dir build/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/Casey-Kiewit/korver.dev#readme",
   "dependencies": {
+    "clean-css-cli": "^5.6.0",
     "html-minifier": "^4.0.0"
   }
 }
