--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A website for Casey Korver.",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build-css && npm run build-html && cp -r src/img/ build/img/",
+    "build": "npm run build-css && npm run build-favicon && npm run build-html && npm run build-img",
     "build-css": "npx cleancss -O2 --batch src/css/* --batch-suffix '' --output build/css/",
+    "build-favicon": "cp src/*.png build/ && cp src/favicon.ico build/ && cp src/site.webmanifest build/",
     "build-html": "npx html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src/ --file-ext html --output-dir build/",
+    "build-img": "cp -r src/img/ build/img/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
