--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest
+          tags: ${{ env.IMAGE_NAME }}:latest
           # tags: ${{ steps.meta.outputs.tags }}
           # labels: ${{ steps.meta.outputs.labels }}
